// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "set-severity",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <SetSeverityPopup
        issue={
          Object {
            "severity": "BLOCKER",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      className="issue-action issue-action-with-options js-issue-set-severity"
      onClick={[Function]}
    >
      <SeverityHelper
        className="issue-meta-label"
        severity="BLOCKER"
      />
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetSeverityPopup
        issue={
          Object {
            "severity": "BLOCKER",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      className="issue-action issue-action-with-options js-issue-set-severity"
      onClick={[Function]}
    >
      <SeverityHelper
        className="issue-meta-label"
        severity="BLOCKER"
      />
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<SeverityHelper
  className="issue-meta-label"
  severity="BLOCKER"
/>
`;
